Fixed horizontal scroll

--- a/frontend-challenge/src/index.css
+++ b/frontend-challenge/src/index.css
@@ -29,7 +29,6 @@ body {
   place-items: center;
   justify-content: center;
   min-width: 320px;
-  width: 100dvw;
   min-height: 100vh;
 }
 
